--- a/src/certifications/aws-solutions-architect/s3.md
+++ b/src/certifications/aws-solutions-architect/s3.md
@@ -116,4 +116,44 @@ The URL can change depending on the region, either with a dot or a dash after th
 
 ![](assets/s3-static-site-url.png)
 
+## Versioning
 
+Versioning in S3 allows you to create versions of S3 objects. It is enabled at the bucket level. 
+
+If you enable versioining, each object will contain a version. Uploading an object will assign an key to it and uploading an object with a key will override the defined object.
+
+It is useful to:
+
+- Protected against unintended deletes
+- Roll back to previous versions
+
+## Replication
+
+You can replicate buckets two ways:
+
+1. *CRR*: Cross region replication
+2. *SRR*: same region replication
+
+To enable this you must:
+
+- Enable versioning in both source and dest buckets
+- Give propoer IAM permissions to S3
+
+Some caveats:
+
+- Only new objects are replicated
+- Existing objects can be replicate using **batch replication**
+- Only delete markers are replicated
+- Chaining isn't possible, e.g replicate from bucket 1 > 2 > 3
+
+> A delete marker in Amazon S3 is a placeholder (or marker) for a versioned object that was specified in a simple DELETE request. A simple DELETE request is a request that doesn't specify a version ID. Because the object is in a versioning-enabled bucket, the object is not deleted. But the delete marker makes Amazon S3 behave as if the object is delete
+
+
+## Storage classes
+
+### Concepts:
+
+- **Durability**: how often you would lose items
+- **Availability**: how ready the S3 service is
+
+Refer to the slides for the details on this or [this documentation](https://docs.aws.amazon.com/AmazonS3/latest/userguide/storage-class-intro.html#sc-compare)
