--- a/src/certifications/aws-solutions-architect/s3.md
+++ b/src/certifications/aws-solutions-architect/s3.md
@@ -157,3 +157,66 @@ Some caveats:
 - **Availability**: how ready the S3 service is
 
 Refer to the slides for the details on this or [this documentation](https://docs.aws.amazon.com/AmazonS3/latest/userguide/storage-class-intro.html#sc-compare)
+
+# Advanced S3
+
+## Moving between classes
+
+You can transition between Storage Classes in S3. 
+
+We can do this manually, but also automatically using lifecycle rules.
+
+They can consists of two action types
+
+1. "Transition Actions": transition objects to another class (e.g move to Glacier for archiving after 6 months)
+2. "Expiration actions": delete stale files after 365 days.
+
+They can target object prefixes and tags.
+
+![](assets/moving-classes.png)
+
+## Lifecycle analytics
+
+To help create lifecycle rules, S3 provided analytics (a .CVS export) to help you decide when to transition objects.
+
+## Requester pays
+
+A requester pays bucket means that the requester will pay for the requests for the objects.
+
+Typically, the bucket owner will pay for storage costs + network request, but this model means a requester will pay for the network request portion.
+
+For this to work, the requester must be AWS authenticated:
+
+![](assets/requester-pays.png)
+
+## Event notifications
+
+Event notifiations let you respond to S3 events and do something.
+
+Some example events could be:
+
+- objectCreated
+- objectRemoved
+- objectRestored etx
+
+You can then take a follow on action:
+
+- Run a Lambda function
+- Send to SNS
+- Send to SQS
+
+> Events can take a minute of longer
+
+The ability to send data between S3 and Lambda, for example, is controlled by resouce access policies:
+
+![](assets/s4-event-policies.png)
+
+### Event bridge
+
+You can consolidate the event sendings through Amazon EventBridge
+
+![](assets/s3-event-bridge.png)
+
+## S3 - base performance
+
+
