--- a/src/certifications/aws-solutions-architect/s3.md
+++ b/src/certifications/aws-solutions-architect/s3.md
@@ -219,4 +219,76 @@ You can consolidate the event sendings through Amazon EventBridge
 
 ## S3 - base performance
 
+- S3 automatically scaled to high request rates, with a latency of 100-200ms
+- 3.5k write operations and 5.5k GET operations per prefix per bucket (a prefix is the middle portion of a path: /bucket/folder1/sub1/file -> "/folder1/sub1/"
+- Spreading operations across 4 prefixes you can get 22,000 GET operations per second
+
+### Optimising performance
+
+- For files over 100mb (required over 5gb) use **multi part upload**, which parallelises uploads:
+
+![](assets/s3-multi-part.png)
+
+- **S3 transfer acceleration**: uses edge locations. It uses private networks to accelerate uploads
+
+![](assets/s3-edge.png)
+
+- **S3 byte-range fetches**: used to speed up downloads by request portions of a file at each time by just using a byte range within the file. Can also just retrieve portions of a file (such as just getting the headers of a file).
+
+![](assets/s3-byte-range.png)
+
+## S3 batch operation
+
+This allows you to match update objects in a bucket. Some example operations:
+
+1. Modify metadata
+2. Copy objects between buckets
+3. Encrypt / unencrypt
+4. Restore
+5. Modify ACLs
+
+> Batch is useful because it include retries, progress tracking, notificiation completion etc
+
+You can use **S3 inventory** and **Athena** to retrieve and filter the objects you want to perform batch operations on. 
+
+![](assets/athena-s3.png)
+
+## S3 Storage Lens
+
+This tool allows you to analyse and optimise S3 across your org. 
+
+It helps uncover anomalies, cost inefficiencies etc
+
+Information can be accessed in a dashboard or exported.
+
+![](assets/storage-lens.png)
+
+### Storage lens metrics
+
+#### Summary
+
+- StorageBytes, ObjectCount
+- *use case*: identify unused prefixes, find fast growing buckets and prefixes
+
+#### Cost
+
+- NonCurrentVersionStorageBytes, IncompleteMultipartUploadStorageBytes
+- *use case*: identify buckets with incomplete multipart uploaded older than 7 days, Identify which objects could be transitioned to lower-cost storage class
+
+#### Data protection
+
+- Find buckets not following data protection best practices
+
+#### Access-management 
+
+- *use case*: identify object ownership
+
+Also: event metrics, perf metrics, activity metrics and status codes
+
+### Pricing 
+
+There are 2 tiers: free vs paid
+
+**Free**: 28 metric available for past 14 days
+**Advanced**: advanced metrics: activity, advanced cost optimisation etc. Available for 15 months.
 
